                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Fandrich (22 Aug 2008)
- Fixed a problem when --dump-header - was given with more than one URL,
  which caused an error when the second header was dumped due to stdout
  being closed.  Added test case 1066 to verify.  Also fixed a potential
  problem where a closed file descriptor might be used for an upload
  when more than one URL is given.

Yang Tse (22 Aug 2008)
- Improved libcurl's internal curl_m*printf() functions integral data type
  size and signedness handling.

- Internal adjustments to better select/differentiate when large/small file
  support is provided using WIN32 functions directly.

Daniel Fandrich (20 Aug 2008)
- Added an edited version of Vincent Le Normand's documentation of SFTP quote
  commands to the man pages.

Daniel Stenberg (20 Aug 2008)
- Phil Pellouchoud pointed out that the windows version of libcurl had a
  memory leak because it never called the OpenSSL function
  CRYPTO_cleanup_all_ex_data() as it was supposed to. This was because of a
  missing define in config-win32.h!

Gisle Vanem (18 Aug 2008)
- Updated lib/Makefile.Watcom with the option to use c-ares (USE_ARES=1).

Yang Tse (18 Aug 2008)
- Added test case 557 to verify libcurl's internal curl_m*printf() functions
  formatting functionality when handling signed and unsigned longs, as well as
  our curl_off_t data type.

Yang Tse (17 Aug 2008)
- OpenSSl enabled NetWare builds are changed to use the 'openssl' subdirectory
  when including the OpenSSL header files. This is the recommended setting, this
  prevents the undesired inclusion of header files with the same name as those
  of OpenSSL but which do not belong to the OpenSSL package. The visible change