@@ -57,6 +57,7 @@ This release includes the following bugfixes:
  o memory leak in libcurl on Windows built with OpenSSL
  o improved curl_m*printf() integral data type size and signedness handling
  o error when --dump-header - used with more than one URL
+ o proxy closing connect during CONNECT with auth with the multi interface
 
 This release includes the following known bugs:
 
